--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -3,6 +3,11 @@ header{
     @include flexColumnCenter();
     gap: 1rem;
     text-align: center;
+    border: 1px solid red;
+
+    @media screen and (max-width:380px) {
+        padding: 40px 20px;
+    }
 
     h1 {
         font-size: 2.5rem;
@@ -23,14 +28,14 @@ header{
         width: 90vw;
         max-width: 650px;
         @include flexRow(center);
-        gap: 2rem;
+        gap: 1.5rem;
 
         .input-field {
             @include flexRow();
-            gap: 12px;
+            gap: 8px;
             background-color: white;
             padding: 5px 10px;
-            border: 1px solid #000;
+            border: none;
             border-radius: 4px;
             @include sombra(4px);
 
@@ -39,6 +44,9 @@ header{
                 font-size: 1rem;
                 background: transparent;
                 text-transform: capitalize;
+                max-width: 80%;
+
+                
 
                 &:focus {
                     outline: none;
@@ -51,21 +59,50 @@ header{
             span {
                 color: #ccc;
             }
+
+            @media screen and (max-width:320px) {
+                input {
+                    font-size: 0.7rem;
+                }
+
+                width: 70vw;
+            }
         }
 
         .input-submit-box {
             @include flexRow();
             gap: 5px;
 
+            
+
             select {
                 font-size: 1rem;
                 padding: 5px 10px;
                 border: none;
                 border-radius: 4px;
+                background: white;
                 @include sombra(5px);
 
                 &:focus {
                     outline: none;
+                }
+            }
+
+            button {
+                font-size: 1rem;
+                padding: 5px 10px;
+                border: none;
+                border-radius: 4px;
+                background: rgb(0, 0, 0);
+                color: white;
+                @include sombra(5px);
+                cursor: pointer;
+            }
+
+            @media screen and (max-width:320px) {
+                select,button {
+                    font-size: 0.8rem;
+                    width: 70vw;
                 }
             }
         }
