--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,6 @@ header {
   justify-content: center;
   gap: 1rem;
   text-align: center;
-  border: 1px solid red;
   margin-bottom: 40px;
 }
 @media screen and (max-width: 380px) {
@@ -157,21 +156,30 @@ main .cardTarefas {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 0.6rem;
+  gap: 1rem;
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
   border-radius: 5px;
   max-width: 100%;
   width: 320px;
+  transition: all 0.5s ease;
 }
 @media screen and (max-width: 720px) {
   main .cardTarefas {
     width: 500px;
   }
 }
+main .cardTarefas .containerTarefas {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  width: 100%;
+}
 main .cardTarefas .tarefaBox {
   background-color: white;
-  width: 280px;
-  max-width: 100%;
+  width: 100%;
+  max-width: 400px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -182,6 +190,33 @@ main .cardTarefas .tarefaBox {
   box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.3);
   border-radius: 1px;
   cursor: pointer;
+}
+main .cardTarefas .tarefaBox .deleteIcon {
+  color: #000;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  background-color: #ff4949;
+  border: 1px solid #ff4949;
+  outline: none;
+  cursor: pointer;
+  transition: all 0.5s ease;
+}
+main .cardTarefas .tarefaBox .deleteIcon:hover {
+  background-color: #fa1e1e;
+  transform: scale(1.05);
+}
+main .cardTarefas .tarefaBox.clicado {
+  border: 1px solid #013a05;
+}
+main .cardTarefas .tarefaBox.clicado .checkIcon {
+  color: #013a05;
+}
+main .cardTarefas .tarefaBox.clicado .nomeTarefa {
+  color: #ccc;
+  text-decoration: line-through;
 }
 
 /*# sourceMappingURL=style.css.map */
